--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,8 +3,107 @@
 	box-sizing: border-box;
 }
 
-h1 {
-	font-size: 300px;
+body{
+	background: #ccdcff;
+}
+
+h1,h2,h3,h4,h5,h6 {
 	text-align: center;
-	color: fuchsia;
+}
+
+button {
+	background-color: #3374ff;
+	border-radius: 20px;
+	display: inline-block;
+	cursor: pointer;
+	color: #ffffff;
+	font-size: 18pt;
+	letter-spacing: .03em;
+	padding: 7px 24px;
+	margin: 1% 0% 2% 1%;
+}
+button:hover {
+	background-color:navy;
+}
+
+.search {
+	width: 80%;
+	display: block;
+	margin: auto;
+}
+
+.postingForm {
+	border: 2px solid black;
+	width: 90%;
+	margin: auto;
+	background: #99ccff;
+	display: none;
+}
+.cancel {
+	display: none;
+}
+
+form {
+    margin: 0 auto;
+    padding: 0%;
+    text-align: center;
+
+    textarea {
+    	width: 65%;
+    	margin: 2% auto; 
+    	border: 2px solid black;
+    	padding: 1%;
+	    display: block;
+	    font-size: 35px;
+	    line-height: 30px;
+	    background: white;
+	     text-align: center;
+    }
+}
+
+table {
+    border: 1px solid black;
+    margin: auto;
+    width: 90%;
+    font-size: 30pt;
+}
+
+.firstRow {
+	color: navy;
+}
+
+th:first-child {
+	border: 1px solid black;
+	padding: 0px 15px;
+	width:20%;
+}
+th:nth-child(2) {
+	border: 1px solid black;
+	padding: 0px 15px;
+	width:20%;
+
+}
+th:nth-child(3) {
+	border: 1px solid black;
+	padding: 0px 15px;
+}
+th:nth-child(4) {
+	border: 1px solid black;
+	padding: 0px 10px;
+	color: white;
+	background: navy;
+	width: 1%;
+	cursor: pointer;
+}
+input {
+	width: 70%;
+	margin: 3% ;
+	border: 2px solid black;
+	padding: 1.5%;
+    display: inline-block;
+    font-size: 35px;
+    text-align: center;
+}
+input:focus {
+    	border: 4px solid navy;
 }
